<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/broj"/>
    <EditText
        android:id="@+id/etBroj"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poruka"/>
    <EditText
        android:id="@+id/etPoruka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:lines="5"/>
    <Button
        android:id="@+id/btnPosalji"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_posalji"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/poslana_poruka"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvPoslanaPoruka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/hint"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/primljena_poruka"
        android:textStyle="bold"/>
    <TextView
        android:id="@+id/tvPrimljenaPoruka"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lines="5"
        android:hint="@string/hint"/>

    <Button
        android:id="@+id/btnPrikazi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_prikazi"/>

</LinearLayout>